--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,4 +3,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons");
 
 // Variables
-@import '~vuetify/dist/vuetify.min.css'
+@import '~vuetify/dist/vuetify.min.css';
+@import '~simplemde/dist/simplemde.min.css';
